--- a/flexbox-demo/index.html
+++ b/flexbox-demo/index.html
@@ -15,6 +15,15 @@
       <div class="box box1">Box 1</div>
       <div class="box box2">Box 2</div>
       <div class="box box3">Box 3</div>
+      <div class="box box1">Box 1</div>
+      <div class="box box2">Box 2</div>
+      <div class="box box3">Box 3</div>
+      <div class="box box1">Box 1</div>
+      <div class="box box2">Box 2</div>
+      <div class="box box3">Box 3</div>
+      <div class="box box1">Box 1</div>
+      <div class="box box2">Box 2</div>
+      <div class="box box3">Box 3</div>
     </div>
   </body>
 </html>
